--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
-.App {
-  text-align: center;
+.App{
+  display: flex;
+  flex-direction: column;
+  flex: 100%;
+  flex-wrap: wrap;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
